--- a/sources/sample.ipynb
+++ b/sources/sample.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4f63296e-4f39-4d2c-bfb3-25830887f939",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,40 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "aca9cae6-b582-4167-88ab-12dac362f739",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "x1 = np.array([1,2,3,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e68a4997-2543-4171-a362-78d09648d90d",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3, 4])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
     }
    ],
    "source": [
-    "x1"
+    "import numpy as np \n",
+    "x1 = np.array([1,2,3,4])\n",
+    "print(x1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5279123a-aac4-412b-b07e-46f3d282067a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -62,7 +47,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -77,8 +62,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
